--- a/css/index.css
+++ b/css/index.css
@@ -3,8 +3,8 @@ h1{
   color: black;
 }
 #claves{
-  min-height: 350px;
-  max-height: 400px;
+  min-height: 450px;
+  max-height: 5000px;
   overflow: scroll;
 }      
 #p-btn{
@@ -23,7 +23,7 @@ h1{
   margin-top: 25px;
   position: absolute;
   width: 100%;
-  left: 90%;
+  left: 88%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 } 
@@ -42,7 +42,18 @@ footer {
   padding-top: 8px;
   margin-right: 8px;
   width: auto;
-  }       
+  }
+  .table{
+    margin-bottom: auto;
+  }
+  .container{
+    width: auto;
+  }
+  #masterk-log{
+    width: 340px;
+    height: 540px;
+    margin: auto;
+  }
 }
 @media (min-width: 540px){
   .col-sm-2{padding-right: 0;}      
@@ -52,14 +63,46 @@ footer {
   margin-right: 8px;
   width: auto;
   }
-}  
+  .table{
+    margin-bottom: auto;
+  }
+  .container{
+    width: auto;
+  }
+  #masterk-log{
+  width: 400px;
+  height: 580px;
+  margin: auto;
+  }
+  #masterk{
+  width: 600px;
+  height: 400px;
+  margin: auto;
+  }
+}
+@media (min-width: 768px) {
+    .container{
+      width: auto;
+    }
+  }  
 @media (min-width: 992px) {
   .input-group[class*=col-]{
   padding-left: 55%;
   padding-top: 8px;
   margin-right: 8px;
   width: auto;
-  }       
+  }
+  .container{
+    width: auto;
+  }
+  #p-btn p {
+  margin-top: 25px;
+  position: absolute;
+  width: 100%;
+  left: 83%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);      
+}       
 }     
       
       
