--- a/css/index.css
+++ b/css/index.css
@@ -2,21 +2,25 @@ h1{
   font-family: 'Bubbler One', sans-serif;
   color: black;
 }
+img {
+  width: 120px;
+}
+table{
+  border-collapse:initial;
+}
+
 #claves{
   min-height: 450px;
-  max-height: 5000px;
-  overflow: scroll;
+  max-height: 450px;
+  overflow: overlay;
 }      
-#btn-A p{
-  margin-top: 25px;
-  position: absolute;
-  width: 100%;
-  left: 88%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+#btn-A{
+  padding-top: 8px;
+  margin-top: 15px;
+  margin-left: 40%;
 } 
 .td-w{
-  width: 76px;
+  width: 50px;
 }
 .btn-T{
   padding: 4px 8px;
@@ -25,18 +29,55 @@ h1{
 }
 .btn-C{
   padding: 4px 8px;
+  margin-right: 15px;
   font-size: 10px;
+  opacity: 0.5;
 }
 .btn-T:hover{
   opacity: 1;
 }
-
-footer {
-  background-color: #f1f1f1;
-  margin-bottom: -1px;
-  height: 50px;
-  position: static;      
+.t-p{
+  position: relative;
 }
+td.t-p img{
+  width: 45%;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .1s ease;
+  background-color:#F3F3F3;
+}
+.t-p:hover .overlay {
+  opacity: 1;
+}
+.text {
+  color: black;
+  position: absolute;
+  top: 20%;
+  left: 3%;
+}
+#tooltip #tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: #FC0006;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  /* Position the tooltip */
+  position: absolute;
+  right: 50%;
+  margin-right: -120px;
+  z-index: 1;
+}
+
 @media (min-width: 380px) {
   .input-group[class*=col-]{
   padding-left: 20%;
@@ -55,7 +96,7 @@ footer {
 }
   #masterk-log{
     width: 340px;
-    height: 540px;
+    height: 485px;
     margin: auto;
   }
 }
@@ -78,12 +119,12 @@ footer {
 }
   #masterk-log{
   width: 400px;
-  height: 580px;
   margin: auto;
   }
   #masterk{
-  width: 600px;
-  height: 400px;
+  min-width: 500px;
+  max-width: 650px;
+  height: 314px;
   margin: auto;
   }
 }
@@ -92,8 +133,17 @@ footer {
       width: auto;
     }
     .td-p{
-    width: auto;
-}
+    width: 210px;
+    }
+    .col-sm-3{
+      width: auto;
+    }
+    .navbar-brand{
+    margin-left: 0;
+    }
+    td.t-p img{
+    width: 25%;
+    }
   }  
 @media (min-width: 992px) {
   .input-group[class*=col-]{
@@ -102,17 +152,21 @@ footer {
   margin-right: 8px;
   width: auto;
   }
+  .td-p{
+    width: auto;
+    }
+    td.t-p img{
+    width: 15%;
+    }
+  img {
+  width: 190px;
+  }
   .container{
     width: auto;
   }
-  #btn-A p {
-  margin-top: 25px;
-  position: absolute;
-  width: 100%;
-  left: 92%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);      
-}       
+  #btn-A{
+  margin-left: 43%;
+}     
 }     
       
       
