--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,9 @@ h1{
   font-family: 'Bubbler One', sans-serif;
   color: black;
 }
+img {
+  width: 160px;
+}
 #claves{
   min-height: 450px;
   max-height: 5000px;
@@ -25,9 +28,11 @@ h1{
 }
 .btn-C{
   padding: 4px 8px;
+  margin-right: 15px;
   font-size: 10px;
+  opacity: 0.5;
 }
-.btn-T:hover{
+.btn-T:hover .btn-C:hover{
   opacity: 1;
 }
 
@@ -100,6 +105,9 @@ footer {
   padding-left: 55%;
   padding-top: 8px;
   margin-right: 8px;
+  width: auto;
+  }
+  img {
   width: auto;
   }
   .container{
