expiración de contraseña

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,9 @@
-h1{
+h1, p, #nuevac {
   font-family: 'Bubbler One', sans-serif;
   color: black;
+}
+p {
+  font-size: 20px;
 }
 img {
   width: 120px;
@@ -8,7 +11,24 @@ img {
 table{
   border-collapse:initial;
 }
-
+#nuevac{
+  visibility: hidden;
+  text-align: center;
+  position: absolute;
+  top: 63px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 15% 10%;
+  width: 85%;
+  height: 87%;
+  border-radius: 25px;
+  background-color: #E6E6E6;   
+}
+#nuevac:hover{
+  opacity: 1;
+  background-color: lightgrey;
+}
 #claves{
   min-height: 450px;
   max-height: 450px;
@@ -65,19 +85,34 @@ td.t-p img{
 }
 #tooltip #tooltiptext {
   visibility: hidden;
-  width: 120px;
-  background-color: #FC0006;
+  width: 170px;
+  background-color: #CB0707;
   color: #fff;
+  opacity: 0.9;
   text-align: center;
   border-radius: 6px;
   padding: 5px 0;
   /* Position the tooltip */
   position: absolute;
-  right: 50%;
-  margin-right: -120px;
+  left: 52%;
+  margin-top: 27px;
   z-index: 1;
 }
-
+#tooltip2 #tooltiptext2 {
+  visibility: hidden;
+  width: 170px;
+  background-color: #CB0707;
+  color: #fff;
+  opacity: 0.9;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  /* Position the tooltip */
+  position: absolute;
+  left: 52%;
+  margin-top: 46px;
+  z-index: 1;
+}
 @media (min-width: 380px) {
   .input-group[class*=col-]{
   padding-left: 20%;
